--- a/GameSources/GameSources.vcxitems.filters
+++ b/GameSources/GameSources.vcxitems.filters
@@ -130,7 +130,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Sprites.cpp">
       <Filter>Sources\UI\SceneUI</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)KeyStoneGauge.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)KeyStoneGauge.cpp">
+      <Filter>Sources\UI\GaugeUI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Project.h">
@@ -262,7 +264,9 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Sprites.h">
       <Filter>Headers\UI\SceneUI</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)KeyStoneGauge.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)KeyStoneGauge.h">
+      <Filter>Headers\UI\GaugeUI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Headers">
