--- a/GameSources/GameSources.vcxitems.filters
+++ b/GameSources/GameSources.vcxitems.filters
@@ -145,6 +145,9 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)TutorialUI.cpp">
       <Filter>Sources\UI\SceneUI</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)EffectController.cpp">
+      <Filter>Sources\Effect</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Project.h">
@@ -291,6 +294,9 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)TutorialUI.h">
       <Filter>Headers\UI\SceneUI</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)EffectController.h">
+      <Filter>Headers\Effect</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Headers">
@@ -364,6 +370,12 @@
     </Filter>
     <Filter Include="Sources\UI\TrapUI">
       <UniqueIdentifier>{edf7485e-107f-4750-818e-25a66f9e6808}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Headers\Effect">
+      <UniqueIdentifier>{ec1e5ee0-4c1d-42ec-8762-6a74ba1e242f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Sources\Effect">
+      <UniqueIdentifier>{ea78a7d7-17c5-4411-b528-65f967a8a09f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
