--- a/GameSources/GameSources.vcxitems.filters
+++ b/GameSources/GameSources.vcxitems.filters
@@ -145,14 +145,17 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)HoldSkip.cpp">
       <Filter>Sources\UI\Sprites\Other</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)RBButtonUI.cpp">
-      <Filter>Sources\UI\Sprites\Other</Filter>
-    </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)HoldGauge.cpp">
       <Filter>Sources\UI\Gauge</Filter>
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)TrapNumber.cpp">
       <Filter>Sources\UI\Sprites\Inheritance</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)RBButtonUI.cpp">
+      <Filter>Sources\UI\Sprites\Inheritance</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)EfkInterface.cpp">
+      <Filter>Sources\Effect</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -300,11 +303,14 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)HoldSkip.h">
       <Filter>Headers\UI\Sprites\Other</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)RBButtonUI.h">
-      <Filter>Headers\UI\Sprites\Other</Filter>
-    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)HoldGauge.h">
       <Filter>Headers\UI\Gauge</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)RBButtonUI.h">
+      <Filter>Headers\UI\Sprites\Inheritance</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)EfkInterface.h">
+      <Filter>Headers\Effect</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
